--- a/package.json
+++ b/package.json
@@ -5,7 +5,37 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "@angular/common": "2.4.8",
+    "@angular/compiler": "2.4.8",
+    "@angular/compiler-cli": "2.4.8",
+    "@angular/core": "2.4.8",
+    "@angular/forms": "2.4.8",
+    "@angular/http": "2.4.8",
+    "@angular/platform-browser": "2.4.8",
+    "@angular/platform-browser-dynamic": "2.4.8",
+    "@angular/platform-server": "2.4.8",
+    "@ionic/storage": "^2.0.1",
+    "@types/meteor-publish-composite": "0.0.32",
+    "angular2-google-maps": "^0.17.0",
+    "angular2-moment": "^1.3.3",
     "babel-runtime": "^6.20.0",
-    "meteor-node-stubs": "~0.2.4"
+    "ionic-angular": "^2.3.0",
+    "ionic-native": "^2.9.0",
+    "ionicons": "^3.0.0",
+    "meteor-node-stubs": "~0.2.4",
+    "meteor-rxjs": "^0.4.7",
+    "moment": "^2.18.1",
+    "reflect-metadata": "^0.1.10",
+    "rxjs": "5.0.1",
+    "sharp": "^0.17.3",
+    "typescript": "^2.2.2",
+    "zone.js": "0.7.2"
+  },
+  "devDependencies": {
+    "@types/meteor": "^1.4.1",
+    "@types/meteor-accounts-phone": "0.0.5",
+    "@types/meteor-collection-hooks": "^0.8.1",
+    "@types/underscore": "^1.8.0",
+    "meteor-typings": "^1.3.1"
   }
 }
