--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@ionic-native/splash-screen": "3.10.2",
         "@ionic-native/status-bar": "3.10.2",
         "@ionic/storage": "2.0.1",
+        "angular2-google-maps": "^0.17.0",
         "cordova-android": "^6.2.3",
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.5",
@@ -44,8 +45,10 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "1.3.7",
-        "@ionic/cli-plugin-cordova": "1.2.1",
-        "@ionic/cli-plugin-ionic-angular": "1.2.0",
+        "@ionic/cli-plugin-cordova": "1.3.0",
+        "@ionic/cli-plugin-ionic-angular": "1.3.0",
+        "@types/google-maps": "^3.2.0",
+        "@types/googlemaps": "^3.26.13",
         "typescript": "2.3.3"
     },
     "description": "An Ionic project",
