--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "ionic:serve": "ionic-app-scripts serve"
     },
     "dependencies": {
+        "@agm/core": "^1.0.0-beta.0",
         "@angular/common": "4.1.2",
         "@angular/compiler": "4.1.2",
         "@angular/compiler-cli": "4.1.2",
@@ -26,13 +27,13 @@
         "@ionic-native/splash-screen": "3.10.2",
         "@ionic-native/status-bar": "3.10.2",
         "@ionic/storage": "2.0.1",
-        "angular2-google-maps": "^0.17.0",
         "cordova-android": "^6.2.3",
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-geolocation": "^2.4.3",
-        "cordova-plugin-googlemaps": "^1.4.0",
+        "cordova-plugin-googlemaps": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps.git#multiple_maps",
+        "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
@@ -45,8 +46,8 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "1.3.7",
-        "@ionic/cli-plugin-cordova": "1.3.0",
-        "@ionic/cli-plugin-ionic-angular": "1.3.0",
+        "@ionic/cli-plugin-cordova": "1.4.0",
+        "@ionic/cli-plugin-ionic-angular": "1.3.1",
         "@types/google-maps": "^3.2.0",
         "@types/googlemaps": "^3.26.13",
         "typescript": "2.3.3"
@@ -54,17 +55,17 @@
     "description": "An Ionic project",
     "cordova": {
         "plugins": {
-            "cordova-plugin-googlemaps": {
-                "API_KEY_FOR_ANDROID": "AIzaSyD4E1g6MYlG73NQsdoJb4QW1Qzt3Cae2hI",
-                "API_KEY_FOR_IOS": "AIzaSyD4E1g6MYlG73NQsdoJb4QW1Qzt3Cae2hI"
-            },
             "cordova-plugin-geolocation": {},
             "cordova-plugin-console": {},
             "cordova-plugin-device": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-googlemaps": {
+                "API_KEY_FOR_ANDROID": "AIzaSyD4E1g6MYlG73NQsdoJb4QW1Qzt3Cae2hI",
+                "API_KEY_FOR_IOS": "AIzaSyD4E1g6MYlG73NQsdoJb4QW1Qzt3Cae2hI"
+            }
         },
         "platforms": [
             "android"
