--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,11 @@
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "downlevelIteration": true,
     "lib": [
       "dom",
-      "es2015"
+      "es2015",
+      "es2016"
     ],
     "module": "commonjs",
     "moduleResolution": "node",
