--- a/package.json
+++ b/package.json
@@ -15,21 +15,23 @@
   },
   "dependencies": {
     "@agm/core": "^1.0.0-beta.0",
-    "@angular/common": "4.1.2",
-    "@angular/compiler": "4.1.2",
-    "@angular/compiler-cli": "4.1.2",
-    "@angular/core": "4.1.2",
-    "@angular/forms": "4.1.2",
-    "@angular/http": "4.1.2",
-    "@angular/platform-browser": "4.1.2",
-    "@angular/platform-browser-dynamic": "4.1.2",
+    "@angular/common": "4.1.3",
+    "@angular/compiler": "4.1.3",
+    "@angular/compiler-cli": "4.1.3",
+    "@angular/core": "4.1.3",
+    "@angular/forms": "4.1.3",
+    "@angular/http": "4.1.3",
+    "@angular/platform-browser": "4.1.3",
+    "@angular/platform-browser-dynamic": "4.1.3",
     "@ionic-native/core": "3.10.2",
     "@ionic-native/geolocation": "^3.10.3",
     "@ionic-native/google-maps": "^3.10.2",
     "@ionic-native/splash-screen": "3.10.2",
     "@ionic-native/status-bar": "3.10.2",
     "@ionic/storage": "2.0.1",
+    "@types/underscore": "^1.8.1",
     "babel-runtime": "^6.23.0",
+    "bcrypt": "^1.0.2",
     "cordova-android": "^6.2.3",
     "cordova-plugin-compat": "^1.1.0",
     "cordova-plugin-console": "^1.0.5",
@@ -40,14 +42,14 @@
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.2.2",
     "cordova-plugin-whitelist": "^1.3.1",
-    "ionic-angular": "3.3.0",
+    "ionic-angular": "^3.5.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "meteor-node-stubs": "^0.2.11",
     "meteor-rxjs": "^0.4.7",
-    "rxjs": "5.1.1",
+    "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.11"
+    "zone.js": "0.8.12"
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.7",
