--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
     "homepage": "http://ionicframework.com/",
     "private": true,
     "scripts": {
-        "api": "cd api && meteor run --settings private/settings.json",
+        "api": "cd api && meteor run --settings private/settings.json >test.log",
         "clean": "ionic-app-scripts clean",
         "build": "ionic-app-scripts build",
         "lint": "ionic-app-scripts lint",
         "ionic:build": "ionic-app-scripts build",
         "ionic:serve": "ionic-app-scripts serve",
-        "meteor-client:bundle": "meteor-client bundle -s api -c meteor-client.config.json"
+        "meteor-client:bundle": "meteor-client bundle -s api --url=http:192.168.0.20:3000"
     },
     "dependencies": {
         "@agm/core": "^1.0.0-beta.0",
@@ -53,12 +53,13 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "1.3.7",
-        "@ionic/cli-plugin-cordova": "1.4.1",
-        "@ionic/cli-plugin-ionic-angular": "1.3.2",
+        "@ionic/cli-plugin-cordova": "1.5.0",
+        "@ionic/cli-plugin-ionic-angular": "1.4.0",
         "@types/google-maps": "^3.2.0",
         "@types/googlemaps": "^3.26.13",
         "@types/meteor": "^1.4.2",
         "@types/underscore": "^1.8.1",
+        "ionic": "3.6.0",
         "meteor-typings": "^1.3.1",
         "tmp": "0.0.31",
         "typescript": "2.3.3",
