--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
     "homepage": "http://ionicframework.com/",
     "private": true,
     "scripts": {
-        "api": "cd api && meteor run --settings private/settings.json >test.log",
+        "api": "cd api && export ROOT_URL=http://192.168.0.20:3000 && meteor run --settings private/settings.json",
+        "api:reset": "cd api && export ROOT_URL=192.168.0.20:3000 && meteor reset",
         "clean": "ionic-app-scripts clean",
         "build": "ionic-app-scripts build",
         "lint": "ionic-app-scripts lint",
         "ionic:build": "ionic-app-scripts build",
         "ionic:serve": "ionic-app-scripts serve",
-        "meteor-client:bundle": "meteor-client bundle -s api --url=http:192.168.0.20:3000"
+        "meteor-client:bundle": "meteor-client bundle -s api -c meteor-client.config.json"
     },
     "dependencies": {
         "@agm/core": "^1.0.0-beta.0",
@@ -59,7 +60,7 @@
         "@types/googlemaps": "^3.26.13",
         "@types/meteor": "^1.4.2",
         "@types/underscore": "^1.8.1",
-        "ionic": "3.6.0",
+        "ionic": "3.9.2",
         "meteor-typings": "^1.3.1",
         "tmp": "0.0.31",
         "typescript": "2.3.3",
